--- a/ToolHireAppProject/ToolHireAppProject/MainWindow.xaml
+++ b/ToolHireAppProject/ToolHireAppProject/MainWindow.xaml
@@ -5,8 +5,47 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ToolHireAppProject"
         mc:Ignorable="d"
-        Title="Tooled Up Booking App" Height="450" Width="800">
+        Title="Tooled Up Booking App" MinHeight="450" MinWidth="800">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="20" />
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="10" />
+            <ColumnDefinition Width="auto" />
+            
+            <ColumnDefinition Width="20" />
+
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="5" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="20" />
+        </Grid.RowDefinitions>
+        <TextBlock Text="PLEASE LOGON" 
+                   Grid.Row="1" 
+                   Grid.Column="1" 
+                   FontSize="20" 
+                   FontFamily="Ariel" 
+                   FontStyle="Normal" 
+                   FontWeight="Bold"
+                   TextDecorations="Underline" 
+                   Grid.ColumnSpan="2"
+                   Margin="5"/> 
+
+        <TextBlock Text="Username" Grid.Column="1" Grid.Row="2"/>
+        <TextBox Name="tbxUsername" Grid.Column="2" Grid.Row="2" Width="100" />
+        <TextBlock Text="Password" Grid.Column="1" Grid.Row="4"/>
+        <TextBox Name="tbxPassword" Grid.Column="2" Grid.Row="4" Width="100" />
+
+        <Button Content="LOGON" Name="btnLOGON" Grid.Column="5" Grid.Row="6" Width="100" Height="20" Click="BtnLOGON_Click" />
+        <Button Content="EXIT" Name="btnEXIT" Grid.Column="3" Grid.Row="6" Width="100" Height="20"/>
+
     </Grid>
 </Window>
