--- a/ToolHireAppProject/ToolHireAppProject/MainWindow.xaml
+++ b/ToolHireAppProject/ToolHireAppProject/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ToolHireAppProject"
         mc:Ignorable="d"
-        Title="Tooled Up Booking App" MinHeight="450" MinWidth="800">
+        Title="Tooled Up Booking App" MinHeight="450" MinWidth="800" Height="450" Width="500">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20" />
@@ -24,7 +24,9 @@
             <RowDefinition Height="auto" />
             <RowDefinition Height="5" />
             <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
             <RowDefinition Height="20" />
         </Grid.RowDefinitions>
@@ -42,10 +44,15 @@
         <TextBlock Text="Username" Grid.Column="1" Grid.Row="2"/>
         <TextBox Name="tbxUsername" Grid.Column="2" Grid.Row="2" Width="100" />
         <TextBlock Text="Password" Grid.Column="1" Grid.Row="4"/>
-        <TextBox Name="tbxPassword" Grid.Column="2" Grid.Row="4" Width="100" />
+        <PasswordBox Grid.Column="2" Grid.Row="4" Width="100" />
 
-        <Button Content="LOGON" Name="btnLOGON" Grid.Column="5" Grid.Row="6" Width="100" Height="20" Click="BtnLOGON_Click" />
-        <Button Content="EXIT" Name="btnEXIT" Grid.Column="3" Grid.Row="6" Width="100" Height="20"/>
+        <Button Content="LOGON" Name="btnLOGON" Grid.Column="5" Grid.Row="7" Width="100" Height="20" Click="BtnLOGON_Click" />
+        <Button Content="EXIT" Name="btnEXIT" Grid.Column="3" Grid.Row="7" Width="100" Height="20"/>
+
+        <ComboBox Name="cboUserNames" Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="2" Height="20" >
+            
+        </ComboBox>
+               
 
     </Grid>
 </Window>
