--- a/ToolHireAppProject/ToolHireAppProject/Dashboard.xaml
+++ b/ToolHireAppProject/ToolHireAppProject/Dashboard.xaml
@@ -31,7 +31,7 @@
         <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,10">
             <Button Name="btnAdmin" Height="26" Width="100" Content="Admin" Margin="10,0"/>
             <Button Name="btnTool" Height="26" Width="100" Content="Tool" Margin="10,0"/>
-            <Button Name="btnExit" Height="26" Width="100" Content="Exit" Margin="10,0"/>
+            <Button Name="btnExit" Click="BtnExit_Click" Height="26" Width="100" Content="Exit" Margin="10,0"/>
         </StackPanel>
 
         <DockPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="5,10,5,0">
