--- a/ToolHireAppProject/ToolHireAppProject/Admin.xaml
+++ b/ToolHireAppProject/ToolHireAppProject/Admin.xaml
@@ -15,7 +15,7 @@
         </Grid.RowDefinitions>
 
         <StackPanel>
-            <TabControl Height="400">
+            <TabControl Height="400" SelectionChanged="TabControl_SelectionChanged">
                 <TabControl.Resources>
                     <Style TargetType="{x:Type TabItem}">
                         <Setter Property="FontSize" Value="14"/>
@@ -41,7 +41,7 @@
                                             <DataTemplate>
                                                 <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap"/>
                                             </DataTemplate>
-                                        </GridViewColumn.CellTemplate>                                        
+                                        </GridViewColumn.CellTemplate>
                                     </GridViewColumn>
 
                                     <GridViewColumn Header="Password" Width="150">
@@ -80,11 +80,32 @@
 
                                 </GridView>
                             </ListView.View>
-                            
+
+                            <ListView.ContextMenu>
+                                <ContextMenu Name="mnuUserListOverview" IsEnabled="True">
+                                    <ContextMenu.Items>
+                                        <MenuItem Header="Add new user" Name="submnuAddNewUser" IsEnabled="True" Click="submnuAddNewUser_Click">
+                                            <MenuItem.Icon>
+                                                <Image Source="images/add.png" />
+                                            </MenuItem.Icon>
+                                        </MenuItem>
+                                        <MenuItem Header="Modify selected User" Name="submnuModifySelectedUser" IsEnabled="False">
+                                            <MenuItem.Icon>
+                                                <Image Source="images/modifyuse.jpg" />
+                                            </MenuItem.Icon>
+                                        </MenuItem>
+                                        <MenuItem Header="Delete selected User" Name="submnuDeleteSelectedUser" IsEnabled="False">
+                                            <MenuItem.Icon>
+                                                <Image Source="images/delete.png" />
+                                            </MenuItem.Icon>
+                                        </MenuItem>
+                                    </ContextMenu.Items>
+                                </ContextMenu>
+                            </ListView.ContextMenu>
                         </ListView>
 
 
-                        <StackPanel Name="stkUserDetails" Grid.Row="1" HorizontalAlignment="Center">
+                        <StackPanel Name="stkUserDetails" Grid.Row="1" HorizontalAlignment="Center" Visibility="Collapsed">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="30*"/>
@@ -107,24 +128,24 @@
                                 <Label Grid.Row="4" Grid.Column="0" Content="Access Level"/>
 
                                 <TextBox Grid.Row="0" Grid.Column="1" Name="tbxUsername"/>
-                                <TextBox Grid.Row="1" Grid.Column="1" Name="tbxPassword"/>
+                                <TextBox Grid.Row="1" Grid.Column="1" Name="tbxPassword" TextChanged="TbxPassword_TextChanged"/>
                                 <TextBox Grid.Row="2" Grid.Column="1" Name="tbxSurname"/>
-                                <TextBox Grid.Row="3" Grid.Column="1" Name="tbxForename"/>
+                                <TextBox Grid.Row="2" Grid.Column="1" Name="tbxForename" Margin="0,23,0,4" Grid.RowSpan="2"/>
                                 <ComboBox Grid.Row="4" Grid.Column="1" Width="150">
                                     <ComboBoxItem Content="User" />
                                     <ComboBoxItem Content="Administrator" />
                                 </ComboBox>
-                                <Button Grid.Row="5" Grid.Column="1" Name="btnUpdate" Content="update" Width="150" Height="26" HorizontalAlignment="Right"></Button>
+                                <Button Grid.Row="5" Grid.Column="1" Name="btnUpdate" Content="update" Width="150" Height="26" HorizontalAlignment="Right" Click="BtnUpdate_Click"></Button>
                             </Grid>
-                            
+
                         </StackPanel>
 
                     </Grid>
-                                      
+
                 </TabItem>
 
                 <TabItem Header="Logs">
-                    
+
                 </TabItem>
             </TabControl>
         </StackPanel>
