--- a/ToolHireAppProject/ToolHireAppProject/Dashboard.xaml
+++ b/ToolHireAppProject/ToolHireAppProject/Dashboard.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         WindowState="Maximized"
         WindowStyle="None"
+        Loaded="Window_Loaded"
         Title="Dashboard" Height="450" Width="800">
     <Grid>
         <Grid.Background>
@@ -23,15 +24,16 @@
         </Grid.ColumnDefinitions>
 
         <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10,0,10">
-            <TextBox Name="tbxSearchText" Height="26" Width="100" Margin="10,0"/>
-            <Button Name="btnSearch" Height="26" Width="100" Content="Search" Margin="10,0"/>
-            <Button Name="btnReset" Height="26" Width="100" Content="reset" Margin="10,0"/>
+            <TextBox Name="tbxSearchText" Height="26" Width="75" Margin="10,0"/>
+            <Button Name="btnSearch" Height="26" Width="75" Content="Search" Margin="10,0"/>
+            <Button Name="btnReset" Height="26" Width="75" Content="reset" Margin="10,0"/>
         </StackPanel>
 
         <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,10">
-            <Button Name="btnAdmin" Height="26" Width="100" Content="Admin" Margin="10,0" Click="BtnAdmin_Click"/>
-            <Button Name="btnTool" Height="26" Width="100" Content="Tool" Margin="10,0"/>
-            <Button Name="btnExit" Click="BtnExit_Click" Height="26" Width="100" Content="Exit" Margin="10,0"/>
+            <Button Name="btnAdmin" Height="26" Width="80" Content="Admin" Margin="10,0" Click="BtnAdmin_Click" Visibility="Collapsed"/>
+            <Button Name="btnManager" Height="26" Width="80" Content="Manager" Margin="10,0" Click="BtnManager_Click" Visibility="Collapsed"/>
+            <Button Name="btnTool" Height="26" Width="80" Content="Tool" Margin="10,0" Click="BtnTool_Click" Visibility="Collapsed"/>
+            <Button Name="btnExit" Click="BtnExit_Click" Height="26" Width="50" Content="Exit" Margin="10,0"/>
         </StackPanel>
 
         <DockPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="5,10,5,0">
