--- a/ToolHireAppProject/ToolHireAppProject/Manager.xaml
+++ b/ToolHireAppProject/ToolHireAppProject/Manager.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="ToolHireAppProject.Admin"
+﻿<Page x:Class="ToolHireAppProject.Manager"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:ToolHireAppProject"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Admin">
+      Title="Manager">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -26,21 +26,17 @@
 
                     </Style>
                 </TabControl.Resources>
-                <TabItem Header="Users">
+                <TabItem Header="Tools">
                     <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="8*"/>
-                            <ColumnDefinition Width="389*"/>
-                        </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="50*"/>
                             <RowDefinition Height="50*"/>
                         </Grid.RowDefinitions>
 
-                        <ListView Name="lstUserList" Grid.Row="0" Grid.ColumnSpan="2" SelectionChanged="LstUserList_SelectionChanged">
+                        <ListView Name="lstToolList" Grid.Row="0">
                             <ListView.View>
                                 <GridView>
-                                    <GridViewColumn Header="Username" Width="150">
+                                    <GridViewColumn Header="ToolID" Width="150">
                                         <GridViewColumn.CellTemplate>
                                             <DataTemplate>
                                                 <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap"/>
@@ -48,7 +44,7 @@
                                         </GridViewColumn.CellTemplate>
                                     </GridViewColumn>
 
-                                    <GridViewColumn Header="Password" Width="150">
+                                    <GridViewColumn Header="ToolName" Width="150">
                                         <GridViewColumn.CellTemplate>
                                             <DataTemplate>
                                                 <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap"/>
@@ -56,7 +52,7 @@
                                         </GridViewColumn.CellTemplate>
                                     </GridViewColumn>
 
-                                    <GridViewColumn Header="Surname" Width="150">
+                                    <GridViewColumn Header="ToolSerial" Width="150">
                                         <GridViewColumn.CellTemplate>
                                             <DataTemplate>
                                                 <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap"/>
@@ -64,23 +60,13 @@
                                         </GridViewColumn.CellTemplate>
                                     </GridViewColumn>
 
-                                    <GridViewColumn Header="Forename" Width="150">
+                                    <GridViewColumn Header="StockQuantity" Width="150">
                                         <GridViewColumn.CellTemplate>
                                             <DataTemplate>
                                                 <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap"/>
                                             </DataTemplate>
                                         </GridViewColumn.CellTemplate>
                                     </GridViewColumn>
-
-                                    <GridViewColumn Header="Access Level" Width="150">
-                                        <GridViewColumn.CellTemplate>
-                                            <DataTemplate>
-                                                <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap"/>
-                                            </DataTemplate>
-                                        </GridViewColumn.CellTemplate>
-                                    </GridViewColumn>
-
-
 
                                 </GridView>
                             </ListView.View>
@@ -88,19 +74,19 @@
                             <ListView.ContextMenu>
                                 <ContextMenu Name="mnuUserListOverview" IsEnabled="True">
                                     <ContextMenu.Items>
-                                        <MenuItem Header="Add new user" Name="submnuAddNewUser" IsEnabled="True" Click="submnuAddNewUser_Click">
+                                        <MenuItem Header="Add new Tools" Name="submnuAddNewTool" IsEnabled="True" Click="SubmnuAddNewTool_Click">
                                             <MenuItem.Icon>
-                                                <Image Source="images/add.png" />
+                                                <Image Source="images/tooladd.png" />
                                             </MenuItem.Icon>
                                         </MenuItem>
-                                        <MenuItem Header="Modify selected User" Name="submnuModifySelectedUser" IsEnabled="False">
+                                        <MenuItem Header="Modify selected Tool" Name="submnuModifySelectedTool" IsEnabled="False">
                                             <MenuItem.Icon>
-                                                <Image Source="images/modifyuse.jpg" />
+                                                <Image Source="images/modifytool.png" />
                                             </MenuItem.Icon>
                                         </MenuItem>
-                                        <MenuItem Header="Delete selected User" Name="submnuDeleteSelectedUser" IsEnabled="False">
+                                        <MenuItem Header="Delete selected Tool" Name="submnuDeleteSelectedTool" IsEnabled="False">
                                             <MenuItem.Icon>
-                                                <Image Source="images/delete.png" />
+                                                <Image Source="images/deltool.png" />
                                             </MenuItem.Icon>
                                         </MenuItem>
                                     </ContextMenu.Items>
@@ -109,7 +95,7 @@
                         </ListView>
 
 
-                        <StackPanel Name="stkUserDetails" Grid.Row="1" HorizontalAlignment="Center" Visibility="Collapsed" Grid.Column="1" Margin="395,0,383,0">
+                        <StackPanel Name="stkToolDetails" Grid.Row="1" HorizontalAlignment="Center" Visibility="Collapsed" Grid.Column="1" Margin="381.06,0,397,0">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="30*"/>
@@ -125,22 +111,16 @@
                                     <RowDefinition Height="16*"/>
                                 </Grid.RowDefinitions>
 
-                                <Label Grid.Row="0" Grid.Column="0" Content="Username"/>
-                                <Label Grid.Row="1" Grid.Column="0" Content="Password"/>
-                                <Label Grid.Row="2" Grid.Column="0" Content="Surname"/>
-                                <Label Grid.Row="3" Grid.Column="0" Content="Forename"/>
-                                <Label Grid.Row="4" Grid.Column="0" Content="Access Level"/>
-
-                                <TextBox Grid.Row="0" Grid.Column="1" Name="tbxUsername"/>
-                                <TextBox Grid.Row="1" Grid.Column="1" Name="tbxPassword" TextChanged="TbxPassword_TextChanged"/>
-                                <TextBox Grid.Row="2" Grid.Column="1" Name="tbxSurname"/>
+                                <Label Grid.Row="0" Grid.Column="0" Content="ToolName"/>
+                                <Label Grid.Row="1" Grid.Column="0" Content="ToolSerial"/>
+                                <Label Grid.Row="2" Grid.Column="0" Content="StockQuantity"/>
+                                                                
+                                <TextBox Grid.Row="0" Grid.Column="1" Name="tbxToolName"/>
+                                <TextBox Grid.Row="1" Grid.Column="1" Name="tbxToolSerial"/>
+                                <TextBox Grid.Row="2" Grid.Column="1" Name="tbxStockQuantity" TextChanged="TbxStockQuantity_TextChanged"/>
                                 <TextBox Grid.Row="2" Grid.Column="1" Name="tbxForename" Margin="0,23,0,4" Grid.RowSpan="2"/>
-                                <ComboBox Grid.Row="4" Grid.Column="1" Width="150">
-                                    <ComboBoxItem Content="User"/>
-                                    <ComboBoxItem Content="Manager"/>
-                                    <ComboBoxItem Content="Administrator"/>
-                                </ComboBox>
-                                <Button Grid.Row="5" Grid.Column="1" Name="btnUpdate" Content="update" Width="150" Height="26" HorizontalAlignment="Right" Click="BtnUpdate_Click"></Button>
+
+                                <Button Grid.Row="5" Grid.Column="1" Name="btnToolUpdate" Content="update" Width="150" Height="26" HorizontalAlignment="Right" Click="BtnToolUpdate_Click"></Button>
                             </Grid>
 
                         </StackPanel>
@@ -149,10 +129,11 @@
 
                 </TabItem>
 
-                <TabItem Header="Logs">
+                <TabItem Header="Booking">
 
                 </TabItem>
             </TabControl>
         </StackPanel>
+        
     </Grid>
 </Page>
