--- a/ToolHireAppProject/ToolHireAppProject/ToolBooking.xaml
+++ b/ToolHireAppProject/ToolHireAppProject/ToolBooking.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="ToolHireAppProject.Manager"
+﻿<Page x:Class="ToolHireAppProject.ToolBooking"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:ToolHireAppProject"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Manager">
+      Title="ToolBooking">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -15,7 +15,7 @@
         </Grid.RowDefinitions>
 
         <StackPanel>
-            <TabControl Height="400" SelectionChanged="TabControl_SelectionChanged">
+            <TabControl Height="500" >
                 <TabControl.Resources>
                     <Style TargetType="{x:Type TabItem}">
                         <Setter Property="FontSize" Value="14"/>
@@ -26,17 +26,17 @@
 
                     </Style>
                 </TabControl.Resources>
-                <TabItem Header="Tools">
+                <TabItem Header="Customers">
                     <Grid>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="50*"/>
-                            <RowDefinition Height="50*"/>
+                            <RowDefinition Height="99*"/>
+                            <RowDefinition Height="99*"/>
                         </Grid.RowDefinitions>
 
-                        <ListView Name="lstToolList" Grid.Row="0">
+                        <ListView Name="lstCustomerList" Grid.Row="0">
                             <ListView.View>
                                 <GridView>
-                                    <GridViewColumn Header="ToolID" Width="150">
+                                    <GridViewColumn Header="CusName" Width="130">
                                         <GridViewColumn.CellTemplate>
                                             <DataTemplate>
                                                 <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap"/>
@@ -44,7 +44,7 @@
                                         </GridViewColumn.CellTemplate>
                                     </GridViewColumn>
 
-                                    <GridViewColumn Header="ToolName" Width="150">
+                                    <GridViewColumn Header="CusStreet" Width="130">
                                         <GridViewColumn.CellTemplate>
                                             <DataTemplate>
                                                 <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap"/>
@@ -52,7 +52,7 @@
                                         </GridViewColumn.CellTemplate>
                                     </GridViewColumn>
 
-                                    <GridViewColumn Header="ToolSerial" Width="150">
+                                    <GridViewColumn Header="CusTown" Width="130">
                                         <GridViewColumn.CellTemplate>
                                             <DataTemplate>
                                                 <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap"/>
@@ -60,7 +60,23 @@
                                         </GridViewColumn.CellTemplate>
                                     </GridViewColumn>
 
-                                    <GridViewColumn Header="StockQuantity" Width="150">
+                                    <GridViewColumn Header="CusCity" Width="130">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap"/>
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+
+                                    <GridViewColumn Header="CusPostcode" Width="130">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap"/>
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+
+                                    <GridViewColumn Header="CusTelephone" Width="130">
                                         <GridViewColumn.CellTemplate>
                                             <DataTemplate>
                                                 <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap"/>
@@ -72,21 +88,21 @@
                             </ListView.View>
 
                             <ListView.ContextMenu>
-                                <ContextMenu Name="mnuUserListOverview" IsEnabled="True">
+                                <ContextMenu Name="mnuCustomerListOverview" IsEnabled="True">
                                     <ContextMenu.Items>
-                                        <MenuItem Header="Add new Tools" Name="submnuAddNewTool" IsEnabled="True" Click="SubmnuAddNewTool_Click">
+                                        <MenuItem Header="Add new Customer" Name="submnuAddNewCustomer" IsEnabled="True" Click="SubmnuAddNewCustomer_Click">
                                             <MenuItem.Icon>
-                                                <Image Source="images/tooladd.png" />
+                                                <Image Source="images/Add.png" />
                                             </MenuItem.Icon>
                                         </MenuItem>
-                                        <MenuItem Header="Modify selected Tool" Name="submnuModifySelectedTool" IsEnabled="False">
+                                        <MenuItem Header="Modify selected Customer" Name="submnuModifySelectedCustomer" IsEnabled="True">
                                             <MenuItem.Icon>
-                                                <Image Source="images/modifytool.png" />
+                                                <Image Source="images/ModifyUse.jpg" />
                                             </MenuItem.Icon>
                                         </MenuItem>
-                                        <MenuItem Header="Delete selected Tool" Name="submnuDeleteSelectedTool" IsEnabled="False">
+                                        <MenuItem Header="Delete selected Customer" Name="submnuDeleteSelectedCustomer" IsEnabled="true">
                                             <MenuItem.Icon>
-                                                <Image Source="images/deltool.png" />
+                                                <Image Source="images/Delete.png" />
                                             </MenuItem.Icon>
                                         </MenuItem>
                                     </ContextMenu.Items>
@@ -95,7 +111,7 @@
                         </ListView>
 
 
-                        <StackPanel Name="stkToolDetails" Grid.Row="1" HorizontalAlignment="Center" Visibility="Collapsed" Grid.Column="1" Margin="381.06,0,397,0">
+                        <StackPanel Name="stkCustomerDetails" Grid.Row="1" HorizontalAlignment="Center" Visibility="Collapsed" Grid.Column="1" Margin="381.06,0,397,0">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="30*"/>
@@ -103,24 +119,30 @@
                                 </Grid.ColumnDefinitions>
 
                                 <Grid.RowDefinitions>
-                                    <RowDefinition Height="16*"/>
-                                    <RowDefinition Height="16*"/>
-                                    <RowDefinition Height="16*"/>
-                                    <RowDefinition Height="16*"/>
-                                    <RowDefinition Height="16*"/>
-                                    <RowDefinition Height="16*"/>
+                                    <RowDefinition Height="25"/>
+                                    <RowDefinition Height="25"/>
+                                    <RowDefinition Height="25"/>
+                                    <RowDefinition Height="25"/>
+                                    <RowDefinition Height="25"/>
+                                    <RowDefinition Height="25"/>
+                                    <RowDefinition Height="29"/>
                                 </Grid.RowDefinitions>
 
-                                <Label Grid.Row="0" Grid.Column="0" Content="ToolName"/>
-                                <Label Grid.Row="1" Grid.Column="0" Content="ToolSerial"/>
-                                <Label Grid.Row="2" Grid.Column="0" Content="StockQuantity"/>
-                                                                
-                                <TextBox Grid.Row="0" Grid.Column="1" Name="tbxToolName"/>
-                                <TextBox Grid.Row="1" Grid.Column="1" Name="tbxToolSerial"/>
-                                <TextBox Grid.Row="2" Grid.Column="1" Name="tbxStockQuantity" TextChanged="TbxStockQuantity_TextChanged"/>
-                                
+                                <Label Grid.Row="0" Grid.Column="0" Content="CusName"/>
+                                <Label Grid.Row="1" Grid.Column="0" Content="CusStreet"/>
+                                <Label Grid.Row="2" Grid.Column="0" Content="CusTown"/>
+                                <Label Grid.Row="3" Grid.Column="0" Content="CusCity"/>
+                                <Label Grid.Row="4" Grid.Column="0" Content="CusPostcode"/>
+                                <Label Grid.Row="5" Grid.Column="0" Content="CusTelephone"/>
 
-                                <Button Grid.Row="3" Grid.Column="1" Name="btnToolUpdate" Content="update" Width="150" Height="26" HorizontalAlignment="Right" Click="BtnToolUpdate_Click"></Button>
+                                <TextBox Grid.Row="0" Grid.Column="1" Name="tbxCusName"/>
+                                <TextBox Grid.Row="1" Grid.Column="1" Name="tbxCusStreet"/>
+                                <TextBox Grid.Row="2" Grid.Column="1" Name="tbxCusTown"/>
+                                <TextBox Grid.Row="3" Grid.Column="1" Name="tbxCusCity"/>
+                                <TextBox Grid.Row="4" Grid.Column="1" Name="tbxCusPostcode"/>
+                                <TextBox Grid.Row="5" Grid.Column="1" Name="tbxCusTelephone" TextChanged="TbxCusTelephone_TextChanged"/>
+                                
+                                <Button Grid.Row="6" Grid.Column="1" Name="btnCustomerUpdate" Content="update" Width="150" Height="26" HorizontalAlignment="Right" Click="BtnCustomerUpdate_Click"></Button>
                             </Grid>
 
                         </StackPanel>
@@ -134,6 +156,6 @@
                 </TabItem>
             </TabControl>
         </StackPanel>
-        
+
     </Grid>
 </Page>
