--- a/ToolHireAppProject/ToolHireAppProject/Manager.xaml
+++ b/ToolHireAppProject/ToolHireAppProject/Manager.xaml
@@ -39,7 +39,7 @@
                                     <GridViewColumn Header="ToolID" Width="150">
                                         <GridViewColumn.CellTemplate>
                                             <DataTemplate>
-                                                <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap"/>
+                                                <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding ToolID}"/>
                                             </DataTemplate>
                                         </GridViewColumn.CellTemplate>
                                     </GridViewColumn>
@@ -47,7 +47,7 @@
                                     <GridViewColumn Header="ToolName" Width="150">
                                         <GridViewColumn.CellTemplate>
                                             <DataTemplate>
-                                                <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap"/>
+                                                <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding ToolName}"/>
                                             </DataTemplate>
                                         </GridViewColumn.CellTemplate>
                                     </GridViewColumn>
@@ -55,7 +55,7 @@
                                     <GridViewColumn Header="ToolSerial" Width="150">
                                         <GridViewColumn.CellTemplate>
                                             <DataTemplate>
-                                                <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap"/>
+                                                <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding ToolSerial}"/>
                                             </DataTemplate>
                                         </GridViewColumn.CellTemplate>
                                     </GridViewColumn>
@@ -63,7 +63,7 @@
                                     <GridViewColumn Header="StockQuantity" Width="150">
                                         <GridViewColumn.CellTemplate>
                                             <DataTemplate>
-                                                <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap"/>
+                                                <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding StockQuantity}"/>
                                             </DataTemplate>
                                         </GridViewColumn.CellTemplate>
                                     </GridViewColumn>
@@ -72,7 +72,7 @@
                             </ListView.View>
 
                             <ListView.ContextMenu>
-                                <ContextMenu Name="mnuUserListOverview" IsEnabled="True">
+                                <ContextMenu Name="mnuToolListOverview" IsEnabled="True">
                                     <ContextMenu.Items>
                                         <MenuItem Header="Add new Tools" Name="submnuAddNewTool" IsEnabled="True" Click="SubmnuAddNewTool_Click">
                                             <MenuItem.Icon>
